--- a/os.md.html
+++ b/os.md.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="*memo_windows*">
 <meta name="keywords" content="*memo_windows10*">
 Windows
-===============================================================================
+=======================================================
 
 <meta name="keywords" content="*memo_chocolatey*">
 <meta name="keywords" content="*memo_choco*">
@@ -109,7 +109,7 @@ Skype
 <meta name="keywords" content="*memo_dos*">
 <meta name="keywords" content="*memo_bat*">
 DOSコマンド
-===============================================================================
+=======================================================
 ## UNIX - DOS コマンド対応表
 UNIX                    | DOS
 ------------------------|--------------
@@ -177,7 +177,7 @@ if "%str%" == "A" (
 <meta name="keywords" content="*memo_msys*">
 <meta name="keywords" content="*memo_msys2*">
 MSYS2
-===============================================================================
+=======================================================
 - http://www.msys2.org/
 - https://wiki.archlinux.org/index.php/pacman
 
@@ -246,6 +246,7 @@ pacman -S mingw-w64-x86_64-glfw
 pacman -S mingw-w64-x86_64-glm
 pacman -S mingw-w64-x86_64-freeglut
 pacman -S mingw-w64-x86_64-opencv
+pacman -S mingw-w64-x86_64-graphviz
 ~~~
 
 ## Not installed
@@ -257,7 +258,7 @@ pacman -S mingw-w64-i686-toolchain
 
 <meta name="keywords" content="*memo_cygwin*">
 Cygwin
-===============================================================================
+=======================================================
 ## DLLの読み込みに失敗する場合
 C:¥cygwin¥bin¥dash.exe -c '/usr/bin/rebaseall -v'
 
@@ -276,7 +277,7 @@ cygpath -am `pwd`
 
 <meta name="keywords" content="*memo_bootcamp*">
 BootCamp
-===============================================================================
+=======================================================
 ## Shortcut
 Shortcut               | Description
 -----------------------|-------------------------------------
@@ -287,7 +288,7 @@ Alt + Shift + Fn + F11 | 選択されたウィンドウのキャプチャ
 
 <meta name="keywords" content="*memo_linux*">
 Linux
-===============================================================================
+=======================================================
 ## Shortcut [X Window]
 Shortcut            | Description
 --------------------|-------------------------------------
@@ -306,7 +307,7 @@ SysRq + b           | reboot
 
 <meta name="keywords" content="*memo_mac*">
 Mac
-===============================================================================
+=======================================================
 ## Shortcut
 Shortcut        | Description
 ----------------|-------------------------------------
@@ -318,7 +319,7 @@ Cmd + delete    | ファイル削除
 
 <meta name="keywords" content="*memo_termux*">
 Termux
-===============================================================================
+=======================================================
 - https://termux.com/
 - [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
 - Hacker's Keyboard
@@ -348,7 +349,7 @@ pkg install git vim ctags clang cmake tmux
 
 <meta name="keywords" content="*memo_misc*">
 misc
-===============================================================================
+=======================================================
 ## NTP Server
 ntp.nict.jp
 
