--- a/os.md.html
+++ b/os.md.html
@@ -11,8 +11,6 @@ Windows
 <meta name="keywords" content="*memo_choco*">
 ## Chocolatey
 
-- https://chocolatey.org/
-
 ~~~
 # help
 choco -h
@@ -56,10 +54,10 @@ Dropbox
 TeX Live
 LibreOffice
 7-Zip
-CrystalDiskMark https://crystalmark.info/ja/software/crystaldiskmark/
-Ctrl2cap https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx
-Process Explorer https://docs.microsoft.com/en-us/sysinternals/downloads/process-explorer
-Dependency Walker http://www.dependencywalker.com/
+CrystalDiskMark
+Ctrl2cap
+Process Explorer
+Dependency Walker
 
 # Graphics Tool
 Blender
@@ -334,13 +332,13 @@ apt upgrade
 ~~~
 termux-setup-storage
 ~~~
-- https://wiki.termux.com/wiki/Termux-setup-storage
+- [termux-setup-storage](https://wiki.termux.com/wiki/Termux-setup-storage)
 
 ## /bin/shで始まるスクリプトを実行できるようにする
 ~~~
 pkg install termux-exec
 ~~~
-- https://wiki.termux.com/wiki/FAQ#Why_do_I_keep_getting_.27.2Fbin.2Fsh_bad_interpreter.27_error.3F
+- [termux-exec](https://wiki.termux.com/wiki/FAQ#Why_do_I_keep_getting_.27.2Fbin.2Fsh_bad_interpreter.27_error.3F)
 
 ## Installed
 ~~~
