--- a/links.md.html
+++ b/links.md.html
@@ -6,37 +6,157 @@ Links
 =======================================================
 <div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
 
-Webサービス
+## 検索
+- [Google](https://www.google.co.jp/)
+- [Wikipedia]("http://ja.wikipedia.org/")
 
-* [カレンダー]("https://www.google.com/calendar/render?hl=ja")
-* [Gmail]("https://mail.google.com/mail/u/0/#inbox")
-* [メモ]("https://keep.google.com/")
-* [Google ドライブ]("https://drive.google.com/drive/#my-drive")
-* [Dropbox]("https://www.dropbox.com/")
-* [Microsoft Office Online]("https://office.com/start/default.aspx")
+## 動画
+- [YouTube](https://www.youtube.com/)
 
-検索
+## 辞書
+- [翻訳](https://translate.google.co.jp/)
+- [goo 辞書]("http://dictionary.goo.ne.jp/")
+- [英辞郎]("http://www.alc.co.jp/")
 
-* [Google]("http://www.google.co.jp/")
-* [Wikipedia]("http://ja.wikipedia.org/")
-* [goo 辞書]("http://dictionary.goo.ne.jp/")
-* [英辞郎]("http://www.alc.co.jp/")
+## Webサービス
+- [Gmail]("https://mail.google.com/mail/u/0/#inbox")
+- [カレンダー]("https://www.google.com/calendar/render?hl=ja")
+- [メモ]("https://keep.google.com/")
+- [Google ドライブ]("https://drive.google.com/drive/#my-drive")
+- [Dropbox]("https://www.dropbox.com/")
+- [Microsoft Office Online]("https://office.com/start/default.aspx")
 
-Utils
+## Utils
+- [TV番組]("http://tv.yahoo.co.jp/listings/realtime/")
+- [天気]("http://weather.yahoo.co.jp/weather/jp/11/4310/11227.html")
+- [路線]("http://transit.loco.yahoo.co.jp/")
+- [地図]("http://map.yahoo.co.jp/")
 
-* [TV番組]("http://tv.yahoo.co.jp/listings/realtime/")
-* [天気]("http://weather.yahoo.co.jp/weather/jp/11/4310/11227.html")
-* [路線]("http://transit.loco.yahoo.co.jp/")
-* [地図]("http://map.yahoo.co.jp/")
-
-Shopping
-
-* [Amazon]("http://www.amazon.co.jp/")
-* [楽天市場]("http://www.rakuten.co.jp/")
-* [価格.com]("http://www.kakaku.com/")
+## Shopping
+- [Amazon]("http://www.amazon.co.jp/")
+- [楽天市場]("http://www.rakuten.co.jp/")
+- [価格.com]("http://www.kakaku.com/")
 
 </div>
 
+Develop
+=======================================================
+<div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
+
+## フォント
+- [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
+- [日本語等幅フォント](https://qiita.com/hamaguchitm/items/546d40b7777bd9242e78)
+- [Myrica](https://myrica.estable.jp/)
+- [Rounded Mgen+](http://jikasei.me/font/rounded-mgenplus/)
+
+## Vim
+- [vim](https://www.vim.org/)
+  | [vim-jp](http://vim-jp.org/)
+- [VimAwesome](https://vimawesome.com/)
+  - [neobundle](https://github.com/Shougo/neobundle.vim)
+  - [dein](https://github.com/Shougo/dein.vim)
+  - [nerdtree](https://github.com/scrooloose/nerdtree)
+  - [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
+  - [vim-fugitive](https://github.com/tpope/vim-fugitive)
+  - [vim-gitgutter](https://github.com/airblade/vim-gitgutter)
+  - [gitv](https://github.com/gregsexton/gitv)
+  - [agit](https://github.com/cohama/agit.vim)
+- [color schemes](http://colorswat.ch/vim/)
+  - [gruvbox](https://github.com/morhetz/gruvbox)
+
+## SKK
+- [SKK Manual](http://skk-dev.github.io/ddskk/skk.html)
+- [SKK日本語入力FEP](http://coexe.web.fc2.com/skkfep.html)
+- [SKK辞書](http://openlab.jp/skk/wiki/wiki.cgi?page=SKK%BC%AD%BD%F1)
+
+## App
+- [blender](https://www.blender.org/)
+  | [jp](https://blender.jp/)
+- [gimp](https://www.gimp.org/)
+- [inkscape](https://inkscape.org/ja/)
+- [draw.io](https://www.draw.io/)
+- [websequencediagrams](https://www.websequencediagrams.com/)
+
+## Shell
+- [msys2](http://www.msys2.org/)
+- [pacman](https://wiki.archlinux.org/index.php/pacman)
+- [translate-shell](https://www.soimort.org/translate-shell/)
+- [w3m](http://w3m.sourceforge.net/index.ja.html)
+
+## graphviz
+- [graphviz](https://www.graphviz.org/)
+- [Graphvizとdot言語でグラフを描く方法のまとめ](https://qiita.com/rubytomato@github/items/51779135bc4b77c8c20d)
+- [code snippets: graphviz](http://miffysora.wikidot.com/graphviz)
+
+## Windows
+- [chocolatey](https://chocolatey.org/)
+- [CrystalDiskMark](https://crystalmark.info/ja/software/crystaldiskmark/)
+- [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
+- [Process Explorer](https://docs.microsoft.com/en-us/sysinternals/downloads/process-explorer)
+- [Dependency Walker](http://www.dependencywalker.com/)
+
+## Termux
+- [termux](https://termux.com/)
+- [The Termux Wiki](https://wiki.termux.com/wiki/Main_Page)
+
+</div>
+
+Programming
+=======================================================
+<div style="columns:2;-webkit-columns:2;-moz-columns:2;column-gap:3em;-webkit-column-gap:3em;-moz-column-gap:3em">
+
+## Lang, compiler, IDE
+- [clang](https://clang.llvm.org/)
+- [python](https://www.python.org/)
+- [visualstudio](https://www.visualstudio.com/ja/)
+- [androidstudio](https://developer.android.com/studio/?hl=ja)
+- [cmake](https://cmake.org/)
+- [markdeep](http://casual-effects.com/markdeep/)
+
+## Git
+- [Git](https://git-scm.com/)
+- [GitHub](https://github.com/)
+- [GitLab](https://about.gitlab.com/)
+- [サルでもわかるGit入門](https://www.backlog.jp/git-guide/)
+- [TortoiseGit](https://tortoisegit.org/)
+- [git manual](https://git.github.io/htmldocs/git.html)
+
+## SVN
+- [TortoiseSVN](https://tortoisesvn.net/)
+  - [Doc](https://tortoisesvn.net/docs/release/TortoiseSVN_ja/index.html)
+
+## C++
+- [stdman](https://github.com/jeaye/stdman)
+- [cpprefjp](https://cpprefjp.github.io/)
+- [ja.cppreference.com](http://ja.cppreference.com/w/)
+- [en.cppreference.com](http://en.cppreference.com/w/) [offline](http://en.cppreference.com/w/Cppreference:Archives)
+- [cpp-pocketref](https://github.com/cpp-pocketref/sample-code)
+- [C++11 - Wikipedia](https://ja.wikipedia.org/wiki/C%2B%2B11)
+- [C++11, C++14 新機能まとめ ～使いそうなものだけ](https://qiita.com/leon-joel/items/81415c1ef355c6246280)
+- [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
+
+## Lib
+- [glm](https://glm.g-truc.net/)
+  | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
+  | [グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
+- [dlib](http://dlib.net/)
+- [Eigen](http://eigen.tuxfamily.org/)
+- [OpenCV](https://opencv.org/)
+  | [doc](https://docs.opencv.org/master/)
+- [stb](https://github.com/nothings/stb)
+- [nanoflann](https://github.com/jlblancoc/nanoflann)
+- [nanort](https://github.com/lighttransport/nanort)
+- [picojson](https://github.com/kazuho/picojson)
+- [imgui](https://github.com/ocornut/imgui)
+
+## Deep learning
+- [PyTorch](https://pytorch.org/)
+- [Anaconda](https://www.anaconda.com/)
+  | [cloud](https://anaconda.org/)
+
+</div>
+
+<link rel="stylesheet" href="links.css">
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js"></script><script src="https://casual-effects.com/markdeep/latest/markdeep.min.js?"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
 <meta vim:syntax=md
 >
