--- a/dev.md.html
+++ b/dev.md.html
@@ -23,7 +23,7 @@ $ tmux -2
 ~~~
 
 <meta name="keywords" content="*memo_keymap*">
-keymap
+my keymap
 =======================================================
 App  | Command         | Description
 -----|-----------------|---
@@ -35,17 +35,18 @@ vim  | F5              | prev tab
 vim  | F6              | next tab
 tmux | F7              | memo
 tmux | F8              | select next pane
-tmux | F9              | toggle pane width 60/80
+tmux | F9              | toggle left pane width 60/80
 tmux | F10             | maximize pane
 vim  | F11             | copy
 vim  | F12             | paste
+tmux | F1 m            | open man pane
+tmux | F1 t            | open trans pane
+tmux | F1 p            | open python pane
 vim  | C-h             | make hyper link
 vim  | C-y             | open the current file in chrome
 vim  | C-u             | open the hyper link in chrome
 vim  | C-i             | open the hyper link in W3m
 vim  | C-x             | update date
-tmux | m               | man
-tmux | t               | trans
 
 <meta name="keywords" content="*memo_tmux*">
 tmux
