--- a/prog.md.html
+++ b/prog.md.html
@@ -28,6 +28,12 @@ Library
 - [nanort](https://github.com/lighttransport/nanort)
 - [picojson](https://github.com/kazuho/picojson)
 
+~~~
+git submodule add https://github.com/kazuho/picojson.git
+git submodule add https://github.com/ocornut/imgui.git
+git submodule add https://github.com/nothings/stb.git
+~~~
+
 Library doc
 
 - [glm - グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
