--- a/vcs.md.html
+++ b/vcs.md.html
@@ -242,6 +242,13 @@ git worktree prune                     # worktree を削除後実行
 git worktree list                      # list worktrees
 ~~~
 
+<meta name="keywords" content="*memo_git-submodule*">
+## submodule
+~~~
+git submodule add URL [dir]
+git submodule update
+~~~
+
 <meta name="keywords" content="*memo_git-diff*">
 ## diff
 ~~~
