--- a/dev.md.html
+++ b/dev.md.html
@@ -31,7 +31,7 @@ tmux | F1              | prefix
 vim  | F2              | nerdtree
 vim  | F3              | fugitive
 vim  | F4              | agit
-vim  | F5              | prev tab
+vim  | F5              | close tab
 vim  | F6              | next tab
 tmux | F7              | memo
 tmux | F8              | select next pane
