--- a/links.md.html
+++ b/links.md.html
@@ -146,6 +146,7 @@ Programming
 - [stb](https://github.com/nothings/stb)
 - [nanoflann](https://github.com/jlblancoc/nanoflann)
 - [nanort](https://github.com/lighttransport/nanort)
+- [spdlog](https://github.com/gabime/spdlog)
 - [picojson](https://github.com/kazuho/picojson)
 - [imgui](https://github.com/ocornut/imgui)
 - [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
