--- a/links.md.html
+++ b/links.md.html
@@ -111,6 +111,7 @@ Programming
 - [visualstudio](https://www.visualstudio.com/ja/)
 - [androidstudio](https://developer.android.com/studio/?hl=ja)
 - [cmake](https://cmake.org/)
+  - [variables](https://cmake.org/cmake/help/v3.12/manual/cmake-variables.7.html)
 - [markdeep](http://casual-effects.com/markdeep/)
 
 ## Git
@@ -136,6 +137,10 @@ Programming
 - [C++11スマートポインタ入門](https://qiita.com/hmito/items/db3b14917120b285112f)
 
 ## Lib
+- [glfw](http://www.glfw.org/)
+- [gl3w](https://github.com/skaslev/gl3w)
+- [imgui](https://github.com/ocornut/imgui)
+- [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
 - [glm](https://glm.g-truc.net/)
   | [doc](https://glm.g-truc.net/0.9.8/api/modules.html)
   | [グラフィックスプログラミングのためのC++数学系ライブラリー](https://qiita.com/usagi/items/f34976a3d3011506ff7d)
@@ -148,8 +153,6 @@ Programming
 - [nanort](https://github.com/lighttransport/nanort)
 - [spdlog](https://github.com/gabime/spdlog)
 - [picojson](https://github.com/kazuho/picojson)
-- [imgui](https://github.com/ocornut/imgui)
-- [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
 
 ## Deep learning
 - [PyTorch](https://pytorch.org/)
